--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -5,61 +5,61 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-auto mt-3">
-                <h2>Register Here</h2>
-            </div>
-        </div>
-        <div class="row justify-content-md-center mb-1 mt-4 p-1">
-            <div class="col-lg-8 col-md-8 col-sm-12">
-                <form class="row g-3 login-form" action="{% url 'register' %}" method="POST">
-                  {% csrf_token %}
-                  <div class="col-md-6">
-                    <label for="first_name" class="form-label">First Name:</label>
-                    {{ form.first_name }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="last_name" class="form-label">Last Name:</label>
-                    {{ form.last_name }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="email" class="form-label">Email Address:</label>
-                    {{ form.email }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="phone_number" class="form-label">Phone Number:</label>
-                    {{ form.phone_number }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="password" class="form-label">Create Password:</label>
-                    {{ form.password }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="password" class="form-label">Repeat Password:</label>
-                    {{ form.confirm_password }}
-                  </div>
-                  <div class="col">
-                    <button type="submit" class="btn btn-next w-100">Register</button>
-                  </div>
-                  <!--print form errors-->
-                  {{ form.email.errors }}
-                  {{ form.non_field_errors }}
-                </form>
-            </div>
-        </div>
-        <div class="row justify-content-md-center">
-          <div class="col-lg-4 col-md-8 col-sm-12 mt-5">
-            <p class="d-md-inline"> Already registered ?</p>
-            <a class="btn btn-dropdown d-md-inline" href="{% url 'login' %}">Login</a>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-auto mt-3">
+        <h2>Register Here</h2>
+      </div>
     </div>
+    <!--Registration Form-->
+    <div class="row justify-content-md-center mb-1 mt-4 p-1">
+      <div class="col-lg-8 col-md-8 col-sm-12">
+        <form class="row g-3 login-form" action="{% url 'register' %}" method="POST">
+          {% csrf_token %}
+          <div class="col-md-6">
+            <label for="first_name" class="form-label">First Name:</label>
+            {{ form.first_name }}
+          </div>
+          <div class="col-md-6">
+            <label for="last_name" class="form-label">Last Name:</label>
+            {{ form.last_name }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="email" class="form-label">Email Address:</label>
+            {{ form.email }}
+            {{ form.email.errors }}
+          </div>
+          <div class="col-md-6">
+            <label for="phone_number" class="form-label">Phone Number:</label>
+            {{ form.phone_number }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="password" class="form-label">Create Password:</label>
+            {{ form.password }}
+            {{ form.password.erros }}
+          </div>
+          <div class="col-md-6">
+            <label for="password" class="form-label">Repeat Password:</label>
+            {{ form.confirm_password }}
+            {{ form.confirm_password.errors }}
+          </div>
+          <div class="col">
+            <!--Print Form Errors-->
+            {{ form.non_field_errors }}
+            <button type="submit" class="btn btn-next w-100">Register</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!--Link to login page-->
+    <div class="row">
+      <div class="col text-center mt-3">
+        <p class="d-inline"> Already registered ?</p>
+        <a class="btn btn-dropdown d-inline" href="{% url 'login' %}">Login</a>
+      </div>
+    </div>
+  </div>
 </section>
 
 
 {% endblock %}
-
-
-
-
