Cenered the heading and <div> with link to the registration page

--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -5,37 +5,37 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-auto mt-5">
-                <h2>Reset Password</h2>
-            </div>
-        </div>
-        
-        <div class="row justify-content-md-center mt-4 p-1">
-            <div class="col-lg-6 col-md-8 col-sm-12">
-                <form class="row g-3 login-form" action="{% url 'reset_password' %}" method="POST">
-                  {% csrf_token %}
-                  <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Create Password:</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" name="password-1">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleInputPassword2" class="form-label">Confirm Password:</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2" name="password-2">
-                  </div>
-                  <div class="mb-3">
-                    <button type="submit" class="btn btn-next w-100">Reset</button>
-                  </div>
-                </form>
-            </div>
-        </div>
-        <div class="row justify-content-md-center">
-          <div class="col-lg-4 col-md-8 mt-5">
-            <p class="d-inline">Do not have an account ?</p><a class="btn btn-dropdown d-inline" href="{% url 'register' %}">Register</a>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col text-center mt-5">
+        <h2>Reset Password</h2>
+      </div>
     </div>
+    <!--Reset Password Form-->
+    <div class="row justify-content-md-center mt-4 p-1">
+      <div class="col-lg-6 col-md-8 col-sm-12">
+        <form class="row g-3 login-form" action="{% url 'reset_password' %}" method="POST">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Create Password:</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password-1">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword2" class="form-label">Confirm Password:</label>
+            <input type="password" class="form-control" id="exampleInputPassword2" name="password-2">
+          </div>
+          <div class="mb-3">
+            <button type="submit" class="btn btn-next w-100">Reset</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center mt-3">
+        <p class="d-inline">Do not have an account ?</p><a class="btn btn-dropdown d-inline"
+          href="{% url 'register' %}">Register</a>
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock %}
-
