Fix a spelling error

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -72,7 +72,7 @@
                     </ul>
                 </div>
             </div>
-        </di>
+        </div>
 <!--display all the trips-->
         <div class="row">
             <div class="col">
