--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -121,7 +121,7 @@
                     </a>
                     <div class="card-body">
                         <!--Trip Name-->
-                        <a href="{{ trip.get_url }}">
+                        <a href="{{ trip.get_url }}" class="trip-link">
                             <h4 class="card-title">{{ trip.name }}</h4>
                         </a>
                         <!--Description-->
