Removed unused href attribute from <a> element

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -198,7 +198,6 @@
                     </div>
                 </div>
             </div>
-
             {% endfor %}
         </div>
         <!--Pagination-->
@@ -216,7 +215,7 @@
                         </li>
                         {% else %}
                         <li class="page-item disabled">
-                            <a href="#" class="page-link" tabindex="-1" role="button" aria-disabled="true">
+                            <a class="page-link" tabindex="-1" role="button" aria-disabled="true">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
