--- a/trips/templates/trips/update_trip.html
+++ b/trips/templates/trips/update_trip.html
@@ -6,11 +6,12 @@
 {% block content %}
 <section class="main-content">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-auto mt-3">
+        <div class="row">
+            <div class="col mt-3 text-center">
                 <h2>Trip Managment</h2>
             </div>
         </div>
+        <!--update trip form-->
         <div class="row login-form justify-content-md-center m-0 p-1 mb-1 mt-4">
             <div class="col-12 text-center mt-2">
               <h4>Update Trip info here</h4>
@@ -18,7 +19,6 @@
             <div class="col-lg-8 col-md-8 col-sm-12 p-1">
                 <form class="row g-3" method="POST" action="{% url 'update_trip' trip.id %}" enctype="multipart/form-data">
                    {% csrf_token %}
-                   
                    <div class="form-row col-12">
                     <label for="name" class="form-label">Title:</label>
                     {{ form.name }}
@@ -77,7 +77,11 @@
                   </div>
                   <div class="form-row col-md-6">
                     <label for="special_offers" class="form-label">Family Friendly:</label>
+                    {% if trip.family_friendly %}
                     <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly" checked>
+                    {% else %}
+                    <input type="checkbox" name='{{ form.family_friendly }}' id="family_friendly">
+                    {% endif %}
                   </div>
                   <div class="form-row d-flex justify-content-center">
                     <div class="col-md-4 col-sm-12">
@@ -88,25 +92,27 @@
                         <span class="font-weight-bold">Cancel</span>
                       </a>
                     </div>
-
                     <div class="col-md-4 col-sm-12">
+                      {{ form.non_field_errors }}
+                      {{ form.errors }}
                        <!--submit button-->
                       <button id="submit-button" class="btn btn-dropdown add-btn">
-                        <span class="font-weight-bold">Update Trip</span>
+                        <span class="font-weight-bold">Update</span>
                         <span class="icon">
                           <i class="fas fa-plus"></i>
                         </span>
-                        {{ form.non_field_errors }}
-                        {{ form.errors }}
                       </button>
                     </div>
-                    {{ form.non_field_errors }}
-                    {{ form.errors }}
-                  
                   </div>
                 </form>
             </div>
         </div>
+        <!--Button to return to all trips-->
+        <div class="row mt-2">
+          <div class="col text-center">
+              <a href="{% url 'trips' %}" class="btn-next btn">Go back to All Trips</a>
+          </div>
+      </div>
     </div>
 </section>
 
